--- a/angular.json
+++ b/angular.json
@@ -39,12 +39,8 @@
               "src/styles.css",
               "node_modules/primeflex/primeflex.css"
             ],
-            "scripts": [],
-            "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "server.ts"
-            }
+            "scripts": []
+
           },
           "configurations": {
             "production": {
